--- a/src/org/apertium/caffeine/ApertiumCaffeine.form
+++ b/src/org/apertium/caffeine/ApertiumCaffeine.form
@@ -30,7 +30,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="modesComboBox" pref="186" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="displayMarksCheckBox" min="-2" pref="165" max="-2" attributes="0"/>
+                      <Component id="displayMarksCheckBox" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="displayAmbiguityCheckBox" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
